# transcreve-ai

./: .coderabbit.yaml  .cursorrules  .env.example  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  ROADMAP.md  SECURITY.md  index.html  privacy.html  pyproject.toml  style.css  support.html  terms.html
.agents/plugins/: marketplace.json
.claude/rules/: transcreveai.md
.clinerules/: transcreveai.md
.continue/rules/: 00-transcreveai.md
.cursor/rules/: transcreveai.mdc
.devin/rules/: transcreveai.md
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/instructions/: transcreveai.instructions.md
.github/workflows/: ci.yml  dependabot-automerge.yml
.roo/rules/: transcreveai.md
.windsurf/rules/: transcreveai.md
agents/skills/transcreveai-nested-usage/: SKILL.md
docs/: AGENT_VIDEO_INTELLIGENCE.md  ARCHITECTURE.md  CLI_REFERENCE.md  OPEN_SOURCE_CHECKLIST.md  source-support-matrix.md
docs/superpowers/specs/: eval-harness-design.md  multimodel-providers-design.md  persistence-layer-design.md  rag-search-design.md  web-ui-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.js
frontend/src/: main.tsx  router.tsx
frontend/src/api/: client.ts  jobs.ts  search.ts  sources.ts  types.ts
frontend/src/components/dossier/: ChapterList.tsx  ClaimsList.tsx  DossierView.tsx  EntityCloud.tsx  MarkdownRenderer.tsx  SynthesisCard.tsx
frontend/src/components/history/: JobCard.tsx  JobList.tsx  StatusBadge.tsx
frontend/src/hooks/: useJobDetail.ts  useJobEvents.ts  useJobList.ts  useSourceProbe.ts  useSubmitJob.ts
frontend/src/pages/: HomePage.tsx  JobDetailPage.tsx  SearchPage.tsx
frontend/src/styles/: global.css  tokens.css
plugins/obsidian-transcreveai/: README.md  esbuild.config.mjs  main.js  manifest.json  package-lock.json  package.json  tsconfig.json
plugins/obsidian-transcreveai/src/: main.ts
plugins/transcreveai/: .mcp.json  README.md
plugins/transcreveai/.codex-plugin/: plugin.json
plugins/transcreveai/scripts/: transcreveai  transcreveai-mcp
skills/transcreveai-video-intelligence/: SKILL.md
skills/transcreveai-video-intelligence/agents/: openai.yaml
tests/: test_backcompat.py  test_batch.py  test_cli_agent.py  test_cli_sources.py  test_content_intelligence.py  test_dedupe.py  test_downloader.py  test_eval_cli.py  test_eval_judge.py  test_eval_metrics.py  test_eval_report.py  test_eval_runner.py  test_evidence.py  test_index.py  test_mcp_server.py  test_media.py  test_persist_backcompat.py  test_pipeline_templates.py  test_pipeline_visual_first.py  test_provider_capabilities.py  test_providers_registry.py  test_rag_cli.py  test_rag_core.py  test_report.py  test_share.py  test_skill_intelligence.py  test_sources.py  test_storage_cloud.py  test_storage_filesystem.py  test_storage_obsidian.py  test_storage_registry.py  test_transcript_quality.py  test_utils.py  test_web_api.py  test_web_rag.py
tests/smoke/: test_smoke.py
video_kb/: __init__.py  agent_workflow.py  ai.py  batch.py  cli.py  content_intelligence.py  downloader.py  evidence.py  index.py  mcp_server.py  media.py  models.py  ocr.py  pipeline.py  report.py  share.py  skill_intelligence.py  sources.py  transcript_quality.py  utils.py
video_kb/embeddings/: __init__.py  chunker.py  rag.py  store.py
video_kb/eval/: __init__.py  cost_table.py  judge.py  metrics.py  report_writer.py  runner.py  stage_timer.py
video_kb/eval/datasets/: README.txt  default.json
video_kb/providers/: __init__.py  anthropic_provider.py  base.py  gemini_provider.py  local_provider.py  openai_provider.py  registry.py
video_kb/storage/: __init__.py  base.py  filesystem.py  notion.py  obsidian.py  registry.py  s3.py  supabase.py
video_kb/web/: __init__.py  app.py  jobs.py  schemas.py
video_kb/web/routes/: api.py
(+14 files in other folders)
