[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "transcreve-ai"
version = "0.1.0"
description = "TranscreveAI extrai dossies multimodais de videos para base de conhecimento."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
keywords = ["ai", "video", "transcription", "ocr", "knowledge-base", "yt-dlp"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Video",
  "Topic :: Text Processing :: Indexing",
]
dependencies = [
  "yt-dlp>=2024.1.0",
  "openai>=1.0.0",
]

[project.optional-dependencies]
local = [
  "faster-whisper>=1.0.0",
  "sentence-transformers>=3.0.0",
]
gemini = [
  "google-generativeai>=0.7.0",
]
anthropic = [
  "anthropic>=0.30.0",
]
obsidian = [
  "python-frontmatter>=1.0.0",
]
notion = [
  "notion-client>=2.2.0",
]
supabase = [
  "supabase>=2.0.0",
]
s3 = [
  "boto3>=1.34.0",
]
dev = [
  "ruff>=0.4.0",
  "mypy>=1.10.0",
  "pytest>=8.0.0",
  "pytest-cov>=5.0.0",
]

[project.entry-points."transcreve_ai.storage"]
filesystem = "video_kb.storage.filesystem:FilesystemBackend"

[project.urls]
Homepage = "https://github.com/nikolasdehor/transcreve-ai"
Repository = "https://github.com/nikolasdehor/transcreve-ai"
Issues = "https://github.com/nikolasdehor/transcreve-ai/issues"

[project.scripts]
transcreveai = "video_kb.cli:main"
transcreve-ai = "video_kb.cli:main"
video-kb = "video_kb.cli:main"

[tool.setuptools.packages.find]
include = ["video_kb*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
ignore_missing_imports = true
# sem strict para nao bloquear codigo legado existente
